Fixed alignment for tile header.

--- a/src/app/kanban/tile/tile.component.scss
+++ b/src/app/kanban/tile/tile.component.scss
@@ -1,4 +1,4 @@
-strong {
-  position: relative;
-  left: 50%;
+.toast-header {
+  display: flex;
+  justify-content: center;
 }
